Update and rename ILR.md to fall2019.md

--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -1,6 +1,6 @@
 ---
 title: "Fall 2019"
-excerpt: "Students enrolled in my ILR 525:001 and ILR 525:002 should click on the above link for course content"
+excerpt: "TEST"
 collection: teaching
 permalink: /teaching/fall2019
 date: 2019-08-22
