--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -1,7 +1,6 @@
 ---
-title: "Fall 2019"
+title: "Fall"
 collection: teaching
 permalink: /teaching/fall2019
-date: 2012-03-01
-
+date: 2019-08-22
 ---
