--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -3,5 +3,6 @@ title: "Fall"
 collection: teaching
 permalink: /teaching/fall2019
 date: 2019-08-22
-venue: "University 1, Department"
+venue: "WVU, John Chambers College of Business and Economics"
+type: "Graduate course"
 ---
