--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -1,8 +1,8 @@
 ---
-title: "Fall"
+title: "Fall semester: ILR 525"
 collection: teaching
 permalink: /teaching/fall2019
 date: 2019-08-22
-venue: "WVU, John Chambers College of Business and Economics"
+venue: "West Virginia University, John Chambers College of Business and Economics"
 type: "Graduate course"
 ---
