--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -3,5 +3,6 @@ title: "Fall semester: ILR 525"
 collection: teaching
 permalink: /teaching/fall2019
 venue: "West Virginia University, John Chambers College of Business and Economics"
+date: 2019-08-22
 type: "Graduate course"
 ---
