--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -1,5 +1,5 @@
 ---
-title: "2019 | Fall | ILR 525"
+title: "2019 - Fall - ILR 525"
 collection: teaching
 permalink: /teaching/fall2019
 venue: "West Virginia University, John Chambers College of Business and Economics"
