Update and rename 2014-spring-teaching-1.md to fall2019.md

--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -1,8 +1,8 @@
 ---
-title: "Teaching experience 1"
+title: "Fall 2019"
 collection: teaching
 type: ""
-permalink: /teaching/2014-spring-teaching-1
+permalink: /teaching/fall2019
 venue: ""
 date: 2019-08-22
 location: "City, Country"
