--- a/_teaching/fall2019.md
+++ b/_teaching/fall2019.md
@@ -4,7 +4,7 @@ collection: teaching
 type: ""
 permalink: /teaching/fall2019
 venue: ""
-date: 2019-08-22
+date: ""
 location: "City, Country"
 ---
-
+TEST
