--- a/_teaching/_fall2019/ILR525.md
+++ b/_teaching/_fall2019/ILR525.md
@@ -1,1 +1,11 @@
-TEST
+---
+title: "Fall 2019"
+collection: teaching
+type: ""
+permalink: /teaching/fall2019/ILR525/
+venue: ""
+date: 2019-08-01
+location: "City, Country"
+
+---
+
