--- a/_fall2019/ILR525.md
+++ b/_fall2019/ILR525.md
@@ -1,2 +1,12 @@
+---
+title: "ILR 525"
+collection: teaching
+type: ""
+permalink: /teaching/fall2019/ILR525/
+venue: ""
+date: 2019-08-01
+location: "City, Country"
+
+---
 NEW TEST
 NEW TEST
