--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -7,8 +7,10 @@ collection: portfolio
 ## ILR 525:001 (crn: 87832) 
 
 <a href="http://jamiefield.github.io/files/Fall2019_ILR525_001_Field_87832.docx?dl=0">ILR 525:001 Syllabus</a>
+<a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
 
 ## ILR 525:002 (crn: 87833) 
 
 <a href="http://jamiefield.github.io/files/Fall2019_ILR525_002_Field_87833.docx?dl=1">ILR 525:002 Syllabus</a>
+<a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
 
