--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -8,6 +8,7 @@ collection: portfolio
 
 <a href="http://jamiefield.github.io/files/Fall2019_ILR525_001_Field_87832.docx?dl=0">ILR 525:001 Syllabus</a>
 * ### TEST
+   * TEST NEW LINE
 ### Module 1 - Everything Data
 <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
 
