--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -10,7 +10,9 @@ collection: portfolio
    * <a href="http://jamiefield.github.io/files/Fall2019_ILR525_001_Field_87832.docx?dl=0">ILR 525:001 Syllabus</a>
 * ### Module 1 - Everything Data
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
-
+* ### Software Tutorial: How to install R
+   * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial 1</a>
+ 
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
    * <a href="http://jamiefield.github.io/files/Fall2019_ILR525_002_Field_87833.docx?dl=1">ILR 525:002 Syllabus</a>
