--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -13,7 +13,8 @@ collection: portfolio
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
-   * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a> 
+   * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/How to import data.R?dl=0">Code for this tutorial</a>
       
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
@@ -23,5 +24,6 @@ collection: portfolio
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
-   * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a> 
+   * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/How to import data.R?dl=0">Code for this tutorial</a>
 
