--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -15,6 +15,8 @@ collection: portfolio
 * ### Software Tutorial: How to import data in R
    * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/How to import data.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/myData.csv?dl=0">Place this .csv file in the working directory folder so that the corresponding R script will work</a>
+   * <a href="http://jamiefield.github.io/files/myData.xlsx?dl=0">Place this .xlsx file in the working directory folder so that the corresponding R script will work</a>
       
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
@@ -26,4 +28,6 @@ collection: portfolio
 * ### Software Tutorial: How to import data in R
    * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/How to import data.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/myData.csv?dl=0">Place this .csv file in the working directory folder so that the corresponding R script will work</a>
+   * <a href="http://jamiefield.github.io/files/myData.xlsx?dl=0">Place this .xlsx file in the working directory folder so that the corresponding R script will work</a>
 
