--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -8,6 +8,10 @@ collection: portfolio
 
 * ### Syllabus
    * <a href="http://jamiefield.github.io/files/Fall2019_ILR525_001_Field_87832.docx?dl=0">ILR 525:001 Syllabus</a>
+* ### Meta-Sim - Group Project
+<br>
+This semester we will try out a new group project exercise, one that will rely on a simulated data set that I developed. In a nutshell, the data set is intended to represent a large-scale data collection effort from employees in one or more organizations (imagine collecting a lot of data using Qualtrics). The data set was generated from a 50×49 meta-analytic correlation matrix that was populated from a series of metaBUS (see metaBUS.org) queries. This means that all descriptive statistics, correlations, etc. are supported by meta-analytic evidence and, thus, reflect phenomena in the *real* world. Project teams will use the simulated data set to complete a semester-long project, which will require them to use an established theoretical model to examine at least five research questions. A project timetable is provided in the course syllabus.
+   * <a href="http://jamiefield.github.io/files/metaSim_rawData.csv?dl=0">Data file for the group project (n = 10,000)</a>
 * ### Module 1 - Everything Data
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
 * ### Software Tutorial: How to install R and navigate RStudio
@@ -21,6 +25,10 @@ collection: portfolio
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
    * <a href="http://jamiefield.github.io/files/Fall2019_ILR525_002_Field_87833.docx?dl=1">ILR 525:002 Syllabus</a>
+* ### Meta-Sim - Group Project
+<br>
+This semester we will try out a new group project exercise, one that will rely on a simulated data set that I developed. In a nutshell, the data set is intended to represent a large-scale data collection effort from employees in one or more organizations (imagine collecting a lot of data using Qualtrics). The data set was generated from a 50×49 meta-analytic correlation matrix that was populated from a series of metaBUS (see metaBUS.org) queries. This means that all descriptive statistics, correlations, etc. are supported by meta-analytic evidence and, thus, reflect phenomena in the *real* world. Project teams will use the simulated data set to complete a semester-long project, which will require them to use an established theoretical model to examine at least five research questions. A project timetable is provided in the course syllabus.
+   * <a href="http://jamiefield.github.io/files/metaSim_rawData.csv?dl=0">Data file for the group project (n = 10,000)</a>
 * ### Module 1 - Everything Data
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
 * ### Software Tutorial: How to install R and navigate RStudio
