--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -13,6 +13,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/metaSim_rawData.csv?dl=0">Data file for the group project (n = 10,000)</a>
 * ### Module 1 - Everything Data
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
+   * <a href="http://jamiefield.github.io/files/Jamie's notes from Monday, August 26?dl=0">Jamie's notes from Monday, August 26</a>   
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
@@ -29,6 +30,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/metaSim_rawData.csv?dl=0">Data file for the group project (n = 10,000)</a>
 * ### Module 1 - Everything Data
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
+   * <a href="http://jamiefield.github.io/files/Jamie's notes from Monday, August 26?dl=0">Jamie's notes from Monday, August 26</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
