--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -13,7 +13,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/metaSim_rawData.csv?dl=0">Data file for the group project (n = 10,000)</a>
    * <a href="http://jamiefield.github.io/files/Group Project Pre-Registration Form.docx?dl=0">Group Project Pre-Registration Form</a>
 * ### Module 1 - Everything Data
-   * <a href="http://jamiefield.github.io/files/Module 1_v2.ppt?dl=0">PowerPoint presentation for Module 1 lectures</a>
+   * <a href="http://jamiefield.github.io/files/Module 1_v2.pptx?dl=0">PowerPoint presentation for Module 1 lectures</a>
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
    * <a href="http://jamiefield.github.io/files/Notes from Monday August 26.docx?dl=0">My notes from (Monday) August 26</a>
    * ### Some TedTalks for Module 1
@@ -36,7 +36,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/metaSim_rawData.csv?dl=0">Data file for the group project (n = 10,000)</a>
    * <a href="http://jamiefield.github.io/files/Group Project Pre-Registration Form.docx?dl=0">Group Project Pre-Registration Form</a>
 * ### Module 1 - Everything Data
-   * <a href="http://jamiefield.github.io/files/Module 1_v2.ppt?dl=0">PowerPoint presentation for Module 1 lectures</a>
+   * <a href="http://jamiefield.github.io/files/Module 1_v2.pptx?dl=0">PowerPoint presentation for Module 1 lectures</a>
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
    * <a href="http://jamiefield.github.io/files/Notes from Monday August 26.docx?dl=0">My notes from (Monday) August 26</a>
    * ### Some TedTalks for Module 1
