--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -16,6 +16,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module1_v2.pdf?dl=0">PowerPoint presentation for Module 1 lectures</a>
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
    * <a href="http://jamiefield.github.io/files/Notes from Monday August 26.docx?dl=0">My notes from (Monday) August 26</a>
+   * <a href="http://jamiefield.github.io/files/Module 1 Review.docx?dl=0">Module 1 Review</a>
    * ### Some TedTalks for Module 1
       * <a href="https://www.ted.com/talks/ben_goldacre_battling_bad_science?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">Battling bad science</a>
       * <a href="https://www.ted.com/talks/jessica_donohue_the_upside_of_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The upside of data</a>
@@ -39,6 +40,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module1_v2.pdf?dl=0">PowerPoint presentation for Module 1 lectures</a>
    * <a href="http://jamiefield.github.io/files/Module 1 Readings.zip?dl=0">Suggested readings to be completed for Module 1</a>
    * <a href="http://jamiefield.github.io/files/Notes from Monday August 26.docx?dl=0">My notes from (Monday) August 26</a>
+   * <a href="http://jamiefield.github.io/files/Module 1 Review.docx?dl=0">Module 1 Review</a>
    * ### Some TedTalks for Module 1
       * <a href="https://www.ted.com/talks/ben_goldacre_battling_bad_science?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">Battling bad science</a>
       * <a href="https://www.ted.com/talks/jessica_donohue_the_upside_of_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The upside of data</a>
