--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -21,6 +21,11 @@ This semester we will try out a new group project exercise, one that will rely o
       * <a href="https://www.ted.com/talks/ben_goldacre_battling_bad_science?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">Battling bad science</a>
       * <a href="https://www.ted.com/talks/jessica_donohue_the_upside_of_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The upside of data</a>
       * <a href="https://www.ted.com/talks/tricia_wang_the_human_insights_missing_from_big_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The human insights missing from big data</a>
+* ### Module 2 - Descriptive Statistics
+* <a href="http://jamiefield.github.io/files/Comparing groups_Part2.R?dl=0">R code that visualizes a group difference and conducts a t-test to examine the significance of the observed mean difference</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data.csv?dl=0">Sample data set #1 for Module 2 R script</a>
+   * <a href="http://jamiefield.github.io/files/Module 2_v2.csv?dl=0">Sample data set #2 for Module 2 R script</a>
+   * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
@@ -45,6 +50,11 @@ This semester we will try out a new group project exercise, one that will rely o
       * <a href="https://www.ted.com/talks/ben_goldacre_battling_bad_science?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">Battling bad science</a>
       * <a href="https://www.ted.com/talks/jessica_donohue_the_upside_of_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The upside of data</a>
       * <a href="https://www.ted.com/talks/tricia_wang_the_human_insights_missing_from_big_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The human insights missing from big data</a>
+* ### Module 2 - Descriptive Statistics
+* <a href="http://jamiefield.github.io/files/Comparing groups_Part2.R?dl=0">R code that visualizes a group difference and conducts a t-test to examine the significance of the observed mean difference</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data.csv?dl=0">Sample data set #1 for Module 2 R script</a>
+   * <a href="http://jamiefield.github.io/files/Module 2_v2.csv?dl=0">Sample data set #2 for Module 2 R script</a>
+   * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
