--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -23,7 +23,7 @@ This semester we will try out a new group project exercise, one that will rely o
       * <a href="https://www.ted.com/talks/tricia_wang_the_human_insights_missing_from_big_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The human insights missing from big data</a>
 * ### Module 2 - Descriptive Statistics
 * <a href="http://jamiefield.github.io/files/Module 2_unfinished.pdf?dl=0">PowerPoint presentation for Module 2 lectures [updated on 9/25/2019]</a>
-* <a href="http://jamiefield.github.io/files/Comparing groups_Part2.R?dl=0">R code that visualizes a group difference and conducts a t-test to examine the significance of the observed mean difference</a>
+* <a href="http://jamiefield.github.io/files/Comparing groups_Part3.R?dl=0">R code that visualizes a group difference and conducts a t-test to examine the significance of the observed mean difference  (updated on 9/30/2019)</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data.csv?dl=0">Sample data set #1 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v2.csv?dl=0">Sample data set #2 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
@@ -53,7 +53,7 @@ This semester we will try out a new group project exercise, one that will rely o
       * <a href="https://www.ted.com/talks/tricia_wang_the_human_insights_missing_from_big_data?utm_campaign=tedspread&utm_medium=referral&utm_source=tedcomshare">The human insights missing from big data</a>
 * ### Module 2 - Descriptive Statistics
 * <a href="http://jamiefield.github.io/files/Module 2_unfinished.pdf?dl=0">PowerPoint presentation for Module 2 lectures [updated on 9/25/2019]</a>
-* <a href="http://jamiefield.github.io/files/Comparing groups_Part2.R?dl=0">R code that visualizes a group difference and conducts a t-test to examine the significance of the observed mean difference</a>
+* <a href="http://jamiefield.github.io/files/Comparing groups_Part3.R?dl=0">R code that visualizes a group difference and conducts a t-test to examine the significance of the observed mean difference (updated on 9/30/2019)</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data.csv?dl=0">Sample data set #1 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v2.csv?dl=0">Sample data set #2 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
