--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -27,6 +27,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module 2 Data.csv?dl=0">Sample data set #1 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v2.csv?dl=0">Sample data set #2 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Review.docx?dl=0">Module 2 Review_unfinished</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
@@ -57,6 +58,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module 2 Data.csv?dl=0">Sample data set #1 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v2.csv?dl=0">Sample data set #2 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Review.docx?dl=0">Module 2 Review_unfinished</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
