--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -1,8 +1,8 @@
 ---
 layout: archive
-title: "Research"
+title: "Southern Management Association 2019"
 permalink: /research/sma2019
 author_profile: true
 ---
 
-TEST TEST
+A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen
