--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -5,4 +5,4 @@ permalink: /research/sma2019
 author_profile: true
 ---
 
-Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a>
+Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis tool for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a>
