--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -9,11 +9,13 @@ author_profile: true
 Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis tool for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a>
 
 <center><b>The State of the Current Research Environment?</b></center>
-<p><img src= '/images/Implosion.jpg'></p>
+<p><img src= '/images/Implosion.JPG'></p>
 
-<b>Submission Materials</b>
+<b>Submission Materials</b><br>
 <a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a>
+<br>
 <a href="http://jamiefield.github.io/files/Introducing Meta-Sen_SMA2019_SUBMITTED.pdf?dl=0">Accepted manuscript - A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen</a>
+<br>
 <a href="http://jamiefield.github.io/files/SMA_2019_MetaSen.pdf?dl=0">PowerPoint presentation slides</a>
 
 <b>Sample Data Sets</b>
