--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -5,11 +5,11 @@ permalink: /research/sma2019
 author_profile: true
 ---
 
-<b>Welcome!</b>
+<b>Welcome!</b><br>
 Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis tool for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a>
 
-<center><b>The State of the Current Research Environment?</b></center>
-<p><img src= '/images/Implosion.JPG'></p>
+<center><b>The State of the Current Research Environment?</b></center><br>
+<p><img src= '/images/Implosion.png'></p>
 
 <b>Submission Materials</b><br>
 <a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a>
@@ -18,7 +18,7 @@ Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analy
 <br>
 <a href="http://jamiefield.github.io/files/SMA_2019_MetaSen.pdf?dl=0">PowerPoint presentation slides</a>
 
-<b>Sample Data Sets</b>
-<a href="http://jamiefield.github.io/files/Sample Data Set #1.csv?dl=0">Sample Data Set #1</a>
-<a href="http://jamiefield.github.io/files/Sample Data Set #2.csv?dl=0">Sample Data Set #2</a>
-<a href="http://jamiefield.github.io/files/Sample Data Set #3.csv?dl=0">Sample Data Set #3</a>
+<b>Sample Data Sets</b><br>
+<a href="http://jamiefield.github.io/files/Sample Data Set #1.csv?dl=0">Sample Data Set #1</a><br>
+<a href="http://jamiefield.github.io/files/Sample Data Set #2.csv?dl=0">Sample Data Set #2</a><br>
+<a href="http://jamiefield.github.io/files/Sample Data Set #3.csv?dl=0">Sample Data Set #3</a><br>
