--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <b>Welcome!</b><br>
-Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis tool for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a>
+Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis tool for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
 <center><b>The State of the Current Research Environment?</b></center><br>
 <p><img src= '/images/Implosion.png'></p>
@@ -19,6 +19,7 @@ Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analy
 <a href="http://jamiefield.github.io/files/SMA_2019_MetaSen.pdf?dl=0">PowerPoint presentation slides</a>
 
 <b>Sample Data Sets</b><br>
+The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
 <a href="http://jamiefield.github.io/files/Sample Data Set #1.csv?dl=0">Sample Data Set #1</a><br>
 <a href="http://jamiefield.github.io/files/Sample Data Set #2.csv?dl=0">Sample Data Set #2</a><br>
 <a href="http://jamiefield.github.io/files/Sample Data Set #3.csv?dl=0">Sample Data Set #3</a><br>
