--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -8,7 +8,7 @@ author_profile: true
 <b>Welcome!</b><br>
 Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen." Below you will find all relevant files, including the original manuscript submission, PowerPoint presentation slides, weblink to my comprehensive senstivitiy analysis tool for meta-analytic reviews, and sample meta-analytic data sets that can be used to demonstrate the software's functionality. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
-<center><b>The State of the Current Research Environment?</b></center>
+<center><b>Is this the State of our Science?</b></center>
 <p><img src= '/images/Implosion (2).png'></p>
 
 <b>Submission Materials</b><br>
