--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -14,7 +14,7 @@ Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analy
 <b>Submission Materials</b><br>
 <a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a>
 <br>
-<a href="http://jamiefield.github.io/files/Introducing Meta-Sen_SMA2019_SUBMITTED.pdf?dl=0">Accepted manuscript - A Spoonful of Medicine for Meta-Analysis: Introducing Meta-Sen</a>
+<a href="http://jamiefield.github.io/files/Introducing Meta-Sen_SMA2019_SUBMITTED.pdf?dl=0">Accepted manuscript</a>
 <br>
 <a href="http://jamiefield.github.io/files/SMA_2019_MetaSen.pdf?dl=0">PowerPoint presentation slides</a>
 
