--- a/_pages/research/sma2019.md
+++ b/_pages/research/sma2019.md
@@ -20,6 +20,6 @@ Thank you for attending my session titled "A Spoonful of Medicine for Meta-Analy
 
 <b>Sample Data Sets</b><br>
 The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
-<a href="http://jamiefield.github.io/files/Sample Data Set #1.csv?dl=0">Sample Data Set #1</a><br>
-<a href="http://jamiefield.github.io/files/Sample Data Set #2.csv?dl=0">Sample Data Set #2</a><br>
-<a href="http://jamiefield.github.io/files/Sample Data Set #3.csv?dl=0">Sample Data Set #3</a><br>
+<a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set #1</a><br>
+<a href="http://jamiefield.github.io/files/Sample Data Set 2.csv?dl=0">Sample Data Set #2</a><br>
+<a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set #3</a><br>
