--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -29,7 +29,7 @@ This semester we will try out a new group project exercise, one that will rely o
       * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Review.docx?dl=0">Module 2 Review</a>
 * ### Module 3 - General Linear Model
-   * Content to appear here shortly!
+   * <a href="http://jamiefield.github.io/files/Module 3_unfinished.pdf?dl=0">PowerPoint presentation for Module 3 lectures [updated on 10/14/2019]</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
@@ -62,7 +62,7 @@ This semester we will try out a new group project exercise, one that will rely o
       * <a href="http://jamiefield.github.io/files/Module 2_v3.csv?dl=0">Sample data set #3 for Module 2 R script</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Review.docx?dl=0">Module 2 Review</a>
 * ### Module 3 - General Linear Model
-   * Content to appear here shortly!
+      * <a href="http://jamiefield.github.io/files/Module 3_unfinished.pdf?dl=0">PowerPoint presentation for Module 3 lectures [updated on 10/14/2019]</a>
 * ### Software Tutorial: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
 * ### Software Tutorial: How to import data in R
