--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -30,13 +30,17 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module 2 Review.docx?dl=0">Module 2 Review</a>
 * ### Module 3 - General Linear Model
    * <a href="http://jamiefield.github.io/files/Module 3_v2.pdf?dl=0">PowerPoint presentation for Module 3 lectures [updated on 10/16/2019]</a>
-* ### Software Tutorial: How to install R and navigate RStudio
+* ### Software Tutorial 1: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
-* ### Software Tutorial: How to import data in R
+* ### Software Tutorial 2: How to import data in R
    * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/How to import data.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/myData.csv?dl=0">Place this .csv file in the working directory folder so that the corresponding R script will work</a>
    * <a href="http://jamiefield.github.io/files/myData.xlsx?dl=0">Place this .xlsx file in the working directory folder so that the corresponding R script will work</a>
+* ### Software Tutorial 3: Estimating descriptive statistics and performing a t-test in R
+   * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/descriptiveStatistics_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
       
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
@@ -63,11 +67,15 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module 2 Review.docx?dl=0">Module 2 Review</a>
 * ### Module 3 - General Linear Model
    * <a href="http://jamiefield.github.io/files/Module 3_v2.pdf?dl=0">PowerPoint presentation for Module 3 lectures [updated on 10/16/2019]</a>
-* ### Software Tutorial: How to install R and navigate RStudio
+* ### Software Tutorial 1: How to install R and navigate RStudio
    * <a href=" https://us-lti.bbcollab.com/recording/a5cb231e3aac43458af44b917bbaa487">Link to tutorial</a>
-* ### Software Tutorial: How to import data in R
+* ### Software Tutorial 2: How to import data in R
    * <a href="https://us-lti.bbcollab.com/recording/974df843ac4a4581bb0b90be4e099418">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/How to import data.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/myData.csv?dl=0">Place this .csv file in the working directory folder so that the corresponding R script will work</a>
    * <a href="http://jamiefield.github.io/files/myData.xlsx?dl=0">Place this .xlsx file in the working directory folder so that the corresponding R script will work</a>
+* ### Software Tutorial 3: Estimating descriptive statistics and performing a t-test in R
+   * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/descriptiveStatistics_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
 
