--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -41,6 +41,10 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/descriptiveStatistics_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
+* ### Software Tutorial 4: Estimating correlations and corresponding p-values in R
+   * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/correlationMatrix_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
       
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
@@ -78,4 +82,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/descriptiveStatistics_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
-
+* ### Software Tutorial 4: Estimating correlations and corresponding p-values in R
+   * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/correlationMatrix_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
