--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -45,6 +45,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/correlationMatrix_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
+   * <a href="http://jamiefield.github.io/files/Formatted table_final.docx?dl=0">APA formatted table</a>
       
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
@@ -86,3 +87,4 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="https://us-lti.bbcollab.com/recording/ace520214a854cf386a282ef87669d3a">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/correlationMatrix_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
+   * <a href="http://jamiefield.github.io/files/Formatted table_final.docx?dl=0">APA formatted table</a>
