--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -46,7 +46,11 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/correlationMatrix_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
    * <a href="http://jamiefield.github.io/files/Formatted table_final.docx?dl=0">APA formatted table</a>
-      
+* ### Software Tutorial 5: Simple Linear Regression in R
+   * TUTORIAL TO BE POSTED SOON
+   * <a href="http://jamiefield.github.io/files/SLR_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
+   
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
    * <a href="http://jamiefield.github.io/files/Fall2019_ILR525_002_Field_87833.docx?dl=1">ILR 525:002 Syllabus</a>
@@ -88,3 +92,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/correlationMatrix_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
    * <a href="http://jamiefield.github.io/files/Formatted table_final.docx?dl=0">APA formatted table</a>
+* ### Software Tutorial 5: Simple Linear Regression in R
+   * TUTORIAL TO BE POSTED SOON
+   * <a href="http://jamiefield.github.io/files/SLR_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
