--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -47,7 +47,7 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
    * <a href="http://jamiefield.github.io/files/Formatted table_final.docx?dl=0">APA formatted table</a>
 * ### Software Tutorial 5: Simple Linear Regression in R
-   * TUTORIAL TO BE POSTED SOON
+   * <a href="https://us-lti.bbcollab.com/recording/601b25cce00d4632983a2b057f9b342c">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/SLR_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
    
