--- a/_portfolio/fall2019.md
+++ b/_portfolio/fall2019.md
@@ -50,6 +50,10 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="https://us-lti.bbcollab.com/recording/fc2e77ed9e2a4de5a296ed4efd81dd2a">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/SLR_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
+* ### Software Tutorial 6: Multiple Regression (and hierarchical regression) in R
+   * <a href="https://us-lti.bbcollab.com/recording/fc2e77ed9e2a4de5a296ed4efd81dd2a">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/MR_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
    
 ## ILR 525:002 (crn: 87833) 
 * ### Syllabus
@@ -96,4 +100,8 @@ This semester we will try out a new group project exercise, one that will rely o
    * <a href="https://us-lti.bbcollab.com/recording/fc2e77ed9e2a4de5a296ed4efd81dd2a">Link to tutorial</a>
    * <a href="http://jamiefield.github.io/files/SLR_tutorial.R?dl=0">Code for this tutorial</a>
    * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial
+* ### Software Tutorial 6: Multiple Regression (and hierarchical regression) in R
+   * <a href="https://us-lti.bbcollab.com/recording/fc2e77ed9e2a4de5a296ed4efd81dd2a">Link to tutorial</a>
+   * <a href="http://jamiefield.github.io/files/MR_tutorial.R?dl=0">Code for this tutorial</a>
+   * <a href="http://jamiefield.github.io/files/Module 2 Data_v3.csv?dl=0">This is the .csv file for this tutorial 
   
