Update and rename virginia_tech_2020.md to vt2020.md

--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -1,6 +1,7 @@
+---
 layout: archive
 title: "Southern Management Association 2019"
-permalink: /research/virginia_tech_2020
+permalink: /research/vt2020
 author_profile: true
 ---
 
