--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Southern Management Association 2019"
+title: "First Friday Presentation on Meta-Analysis"
 permalink: /research/vt2020
 author_profile: true
 ---
