--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -19,10 +19,10 @@ The following data sets can be used to illustrate the functionality of the Meta-
 <a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set 3</a><br>
 
 ## Potentially helpful articles and other materials
-<a href="http://jamiefield.github.io/files/PRISMA 2009 checklist.pdf?dl=0">PRISMA checklist</a>
-<a href="http://jamiefield.github.io/files/PRISMA 2009 flow diagram.pdf?dl=0">PRISMA 2009 flow diagram</a>
-<a href="http://jamiefield.github.io/files/Bosco, Aguinis, Singh, Field, and Pierce (2015). Correlational effect size benchmarks..pdf?dl=0">Bosco, Aguinis, Singh, Field, and Pierce (2015). Correlational effect size benchmarks.</a>
-<a href="http://jamiefield.github.io/files/Bosco, Uggerslev, and Steel (2017). MetaBUS as a vehicle for facilitating meta-analysis.pdf?dl=0">Bosco, Uggerslev, and Steel (2017). MetaBUS as a vehicle for facilitating meta-analysis.</a>
-<a href="http://jamiefield.github.io/files/Field and Gillett (2010). How to do a meta-analysis.pdf?dl=0">Field and Gillett (2010). How to do a meta-analysis.</a>
-<a href="http://jamiefield.github.io/files/Kepes, Banks, McDaniel, and Whetzel (2012). Publication bias in the organizational sciences.pdf?dl=0">Kepes, Banks, McDaniel, and Whetzel (2012). Publication bias in the organizational sciences.</a>
-<a href="http://jamiefield.github.io/files/Kepes, McDaniel, Brannick, and Banks (2013). Meta-analytic reviews in the organizational sciences - Two meta-analytic schools on the way to MARS.pdf?dl=0">Kepes, McDaniel, Brannick, and Banks (2013). Meta-analytic reviews in the organizational sciences - Two meta-analytic schools on the way to MARS</a>
+<a href="http://jamiefield.github.io/files/PRISMA 2009 checklist.pdf?dl=0">PRISMA checklist</a><br>
+<a href="http://jamiefield.github.io/files/PRISMA 2009 flow diagram.pdf?dl=0">PRISMA 2009 flow diagram</a><br>
+<a href="http://jamiefield.github.io/files/Bosco, Aguinis, Singh, Field, and Pierce (2015). Correlational effect size benchmarks..pdf?dl=0">Bosco, Aguinis, Singh, Field, and Pierce (2015). Correlational effect size benchmarks.</a><br>
+<a href="http://jamiefield.github.io/files/Bosco, Uggerslev, and Steel (2017). MetaBUS as a vehicle for facilitating meta-analysis.pdf?dl=0">Bosco, Uggerslev, and Steel (2017). MetaBUS as a vehicle for facilitating meta-analysis.</a><br>
+<a href="http://jamiefield.github.io/files/Field and Gillett (2010). How to do a meta-analysis.pdf?dl=0">Field and Gillett (2010). How to do a meta-analysis.</a><br>
+<a href="http://jamiefield.github.io/files/Kepes, Banks, McDaniel, and Whetzel (2012). Publication bias in the organizational sciences.pdf?dl=0">Kepes, Banks, McDaniel, and Whetzel (2012). Publication bias in the organizational sciences.</a><br>
+<a href="http://jamiefield.github.io/files/Kepes, McDaniel, Brannick, and Banks (2013). Meta-analytic reviews in the organizational sciences - Two meta-analytic schools on the way to MARS.pdf?dl=0">Kepes, McDaniel, Brannick, and Banks (2013). Meta-analytic reviews in the organizational sciences - Two meta-analytic schools on the way to MARS</a><br>
