--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -11,7 +11,7 @@ author_profile: true
 ## MetaBUS and Meta-Sen
 <a href="https://metabus.org">Link to the metaBUS database</a>
 
-<a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a>
+<a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
 <b>Sample Data Sets</b><br>
 The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
 <a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
