--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -21,6 +21,7 @@ The following data sets can be used to illustrate the functionality of the Meta-
 ## Potentially helpful articles and other materials
 <a href="http://jamiefield.github.io/files/PRISMA 2009 checklist.pdf?dl=0">PRISMA checklist</a><br>
 <a href="http://jamiefield.github.io/files/PRISMA 2009 flow diagram.pdf?dl=0">PRISMA 2009 flow diagram</a><br>
+<a href="http://jamiefield.github.io/files/Moher et al. (2015). Preferred reporting items for systematic review and meta-analysis protocols (PRISMA-P) 2015 statement.pdf?dl=0">Moher et al. (2015). Preferred reporting items for systematic review and meta-analysis protocols (PRISMA-P) 2015 statement</a><br>
 <a href="http://jamiefield.github.io/files/Bosco, Aguinis, Singh, Field, and Pierce (2015). Correlational effect size benchmarks..pdf?dl=0">Bosco, Aguinis, Singh, Field, and Pierce (2015). Correlational effect size benchmarks.</a><br>
 <a href="http://jamiefield.github.io/files/Bosco, Uggerslev, and Steel (2017). MetaBUS as a vehicle for facilitating meta-analysis.pdf?dl=0">Bosco, Uggerslev, and Steel (2017). MetaBUS as a vehicle for facilitating meta-analysis.</a><br>
 <a href="http://jamiefield.github.io/files/Field and Gillett (2010). How to do a meta-analysis.pdf?dl=0">Field and Gillett (2010). How to do a meta-analysis.</a><br>
