--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -13,10 +13,11 @@ author_profile: true
 
 <a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
 <b>Sample Data Sets</b><br>
-The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
-<a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
-<a href="http://jamiefield.github.io/files/Sample Data Set 2.csv?dl=0">Sample Data Set 2</a><br>
-<a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set 3</a><br>
+<br>
+   * The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
+      * <a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
+      * <a href="http://jamiefield.github.io/files/Sample Data Set 2.csv?dl=0">Sample Data Set 2</a><br>
+      * <a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set 3</a><br>
 
 ## Potentially helpful articles and other materials
 <a href="http://jamiefield.github.io/files/PRISMA 2009 checklist.pdf?dl=0">PRISMA checklist</a><br>
