--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -7,15 +7,24 @@ author_profile: true
 
 
 ## Presentation materials
+   * INSERT LINK TO POWERPOINT HERE
 
-## MetaBUS and Meta-Sen
-<a href="https://metabus.org">Link to the metaBUS database</a>
+## Software and meta-analysis tools
+   * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a><br>
+      * Frank's software is very easy to use and has been cited in a few papers
+      * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
+   * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a><br>
+      * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition
+   * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a><br>
+      * My old adviser, Mike McDaniel, who was a student of Frank Schmidt, prepared this script.
+   
+   * <a href="https://metabus.org">Link to the metaBUS database</a>
 
-<a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
-   * The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
-      * <a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
-      * <a href="http://jamiefield.github.io/files/Sample Data Set 2.csv?dl=0">Sample Data Set 2</a><br>
-      * <a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set 3</a><br>
+   *<a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
+      * The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
+         * <a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
+         * <a href="http://jamiefield.github.io/files/Sample Data Set 2.csv?dl=0">Sample Data Set 2</a><br>
+         * <a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set 3</a><br>
 
 ## Potentially helpful articles and other materials
    * <a href="http://jamiefield.github.io/files/PRISMA 2009 checklist.pdf?dl=0">PRISMA checklist</a><br>
