--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -18,7 +18,7 @@ author_profile: true
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a><br>
       * My old adviser, Mike McDaniel, who was a student of Frank Schmidt, prepared this script.
    
-   * <a href="https://metabus.org">Link to the metaBUS database</a>
+   * <a href="https://metabus.org">Link to the metaBUS database</a><br>
 
    *<a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
       * The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
