--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -4,7 +4,11 @@ title: "First Friday Presentation on Meta-Analysis"
 permalink: /research/vt2020
 author_profile: true
 ---
+<b>Welcome!</b><br>
+Thank you for attending my session titled "A meta-presentation: Tools for building trustworthy cumulative knowledge." Below I provide some resources that hopefully will improve your knowledge of meta-analysis. Please stay in touch -- I will be happy to answer future quetions, troubleshoot your meta-analysis problems, and collaborate of research projects. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
+<center><b>Is this the State of our Science?</b></center>
+<p><img src= '/images/Implosion (2).png'></p>
 
 ## Presentation materials
    * INSERT LINK TO POWERPOINT HERE
@@ -20,7 +24,7 @@ author_profile: true
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
 
-   *<a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
+   * <a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
       * The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
          * <a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
          * <a href="http://jamiefield.github.io/files/Sample Data Set 2.csv?dl=0">Sample Data Set 2</a><br>
