--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -42,6 +42,10 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
 
 ## Consortium for the Advancement of Research Methods and Analysis (CARMA) Resources
    * <a href="https://tturawls.mediasite.com/Mediasite/Play/402432ca-3cde-4c4d-b44d-0f59774a32cb">Go to 50:33 for the start if Dr. Ernest O'Boyle's CARMA presentation on meta-analysis and step-by-step guide in R</a><br>
+   * <a href="http://jamiefield.github.io/files/Cheung_Conducting Meta-Analytic Structural Equation Modeling with R.pdf?dl=0">Mike Cheung's CARMA presentation on meta-analysis</a><br>
+   * <a href="http://jamiefield.github.io/files/McDaniel_Publication Bias and Other Sensitivity Analyses in Meta-Analysis_McDaniel.pdf?dl=0">Mike McDaniel's CARMA presentation on meta-analysis</a><br>
+   * <a href="http://jamiefield.github.io/files/oBoyle_Recommendations for reviewers, editors, and authors in systematic reviews and meta-analyses.pdf?dl=0">Ernest O'Boyle's CARMA presentation on meta-analysis</a><br>
+   * <a href="http://jamiefield.github.io/files/Rothestein_Total recall - Should meta-analyses have expiration dates - Rothstein.pdf?dl=0">Rothstein CARMA presentation on meta-analysis</a><br>
 
 ## Books on meta-analysis
    * <a href="https://www.amazon.com/Introduction-Meta-Analysis-Michael-Borenstein/dp/0470057246/ref=sr_1_2?crid=RJ8N49QR6XFO&keywords=meta-analysis&qid=1582042111&sprefix=meta-ana%2Caps%2C142&sr=8-2">Borenstein et al. (2009). Introduction to Meta-Analysis</a><br>
